# python-labview-controls-project

./: .gitignore  CLAUDE.md  MONARCH-cleanup-list.xlsx  README.md  b4_drill_log.jsonl  monarch.jsonl  operate.jsonl  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
.ven/: pyvenv.cfg
docs/: 9049-openloop-audit.docx  9049-openloop-audit.md  9056-warning-policy-asbuilt.md  cRIO9049 Warning Matrix.xlsx  cRIO9049 Warnings.xlsx  command-path-asbuilt.md  crio-file-access.md  deployed-bringup.md  engine-only-9056-tradeoff.md  handoff.md  hb-hardening-clicklevel.md  hello-vi.md  icd.md  labview-notes.md  migration-plan.md  migration-seam.md  monarch-codebase-reference.md  monarch-control-settings.md  monarch-flatten-diff.md  monarch-telemetry.md  session-handoff-2026-07-11.md  shadow-findings.md  sil0-scope-of-work.md  sil1-scope-of-work.md
docs-site/: CLAUDE.html  README.html  index.html
examples/: demo.py  hello_link.py  monarch_listen.py  monarch_operate.py
original-labview-codebase/: Data Logging and Variables.docx  SCADA_HMI.docx  control_settings_flatten.txt
parameter-files/: CylWarningLevels.xml
supervisory/: __init__.py  engine.py  link.py  messages.py  recorder.py  sequencing.py  sim.py  simserver.py
team-update/: build_next_pptx.py  build_pptx.py  build_progress_onepager_pptx.py  build_progress_pptx.py  hello-vi-slide.html  hello-vi-update.pptx  migration-next-steps.pptx  migration-progress-onepager.pptx  migration-progress.pptx  team-update-2026-07-11.pptx  team-update-2026-07-15.pptx  team-update-2026-07-18.pptx  (+2 more)
(+321 files in other folders)
