[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supervisory"
version = "0.1.0"
description = "Python supervisory layer (state machines + decision logic) for a LabVIEW-based controls stack"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.5"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
packages = ["supervisory"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
