[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supervisory"
version = "0.1.0"
description = "Python supervisory layer (state machines + decision logic) for a LabVIEW-based controls stack"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.5"]

[project.optional-dependencies]
# openpyxl: .xlsx outputs (gen_warning_matrix --xlsx, report tooling);
# python-docx / python-pptx: the .docx doc exports and team-update .pptx decks
dev = ["pytest>=8", "openpyxl>=3.1", "python-docx>=1.1", "python-pptx>=0.6.23"]

[tool.setuptools]
packages = ["supervisory", "supervisory.monarch"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
